@@ -12,7 +12,7 @@
     <groupId>com.ncredinburgh</groupId>
     <artifactId>sonar-scalastyle</artifactId>
     <packaging>sonar-plugin</packaging>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.2-SNAPSHOT</version>
 
     <name>Sonar Scalastyle Plugin</name>
     <description>Enables analysis of Scala projects with Scalastyle.</description>
@@ -27,13 +27,13 @@
     </licenses>
 
     <properties>
-        <sonar.version>4.1</sonar.version>
+        <sonar.version>4.5.5</sonar.version>
         <sonar.pluginKey>Scalastyle</sonar.pluginKey>
         <sonar.pluginName>Scalastyle</sonar.pluginName>
         <sonar.pluginClass>com.ncredinburgh.sonar.scalastyle.ScalastylePlugin</sonar.pluginClass>
 
-        <scala.version>2.10.4</scala.version>
-        <scala.major.version>2.10</scala.major.version>
+        <scala.version>2.11.7</scala.version>
+        <scala.major.version>2.11</scala.major.version>
 
         <!-- needed? -->
         <sonar.language>scala</sonar.language>
@@ -56,8 +56,8 @@
 
         <dependency>
             <groupId>org.scalastyle</groupId>
-            <artifactId>scalastyle_2.10</artifactId>
-            <version>0.5.0</version>
+            <artifactId>scalastyle_${scala.major.version}</artifactId>
+            <version>0.7.0</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.scala-lang</groupId>
@@ -71,7 +71,7 @@
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>jsr305</artifactId>
-            <version>2.0.3</version>
+            <version>3.0.0</version>
             <scope>provided</scope>
         </dependency>
 
@@ -88,7 +88,7 @@
         <dependency>
             <groupId>org.scalatest</groupId>
             <artifactId>scalatest_${scala.major.version}</artifactId>
-            <version>2.1.3</version>
+            <version>2.2.5</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
@@ -101,7 +101,14 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
-            <version>1.9.5</version>
+            <version>1.10.19</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
             <scope>test</scope>
         </dependency>
 
@@ -120,12 +127,12 @@
                 <plugin>
                     <groupId>net.alchim31.maven</groupId>
                     <artifactId>scala-maven-plugin</artifactId>
-                    <version>3.1.6</version>
+                    <version>3.2.2</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.17</version>
+                    <version>2.18.1</version>
                 </plugin>
 
             </plugins>
@@ -163,30 +170,13 @@
                     </execution>
                 </executions>
             </plugin>
-            <!-- disable surefire -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <skipTests>true</skipTests>
-                </configuration>
-            </plugin>
-            <!-- enable scalatest -->
-            <plugin>
-                <groupId>org.scalatest</groupId>
-                <artifactId>scalatest-maven-plugin</artifactId>
-                <version>1.0</version>
-                <executions>
-                    <execution>
-                        <id>test</id>
-                        <phase>test</phase>
-                        <goals>
-                            <goal>test</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <argLine>-XX:MaxPermSize=512m -Xmx1024m</argLine>
+                    <includes>
+                        <include>**/*Spec.java</include>
+                    </includes>
                 </configuration>
             </plugin>
         </plugins>
